--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 example_code/
 practice_plotting/netCDF_files/
 practice_plotting/__pycache__
-practice_plotting/satellite_data
+#practice_plotting/satellite_data
 variables.txt
