Practiced making animations on matplotlib

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ practice_plotting/netCDF_files/
 practice_plotting/__pycache__
 #practice_plotting/satellite_data
 variables.txt
+plotting_library_practice/example.gif
